<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi_label">BMI, or Body Mass Index is a way to determine whether your weight is ideal or not. Try it now!</string>
    <string name="berat_badan">Weight (kg)</string>
    <string name="tinggi_badan">Height (cm)</string>
    <string name="pria">Male</string>
    <string name="wanita">Female</string>
    <string name="gender">Gender</string>
    <string name="hitung">Calculate</string>
    <string name="bmi_x">BMI: %1$.2f</string>
    <string name="kurus">Thin</string>
    <string name="ideal">Ideal</string>
    <string name="gemuk">Fat</string>
    <string name="kategori_x">Category: %1$s</string>
    <string name="berat_error">Weight cannot be empty.</string>
    <string name="tinggi_error">Height cannot be empty.</string>
    <string name="gender_error">Select the gender first.</string>
</resources>